# p4c

./: .bazelrc  .gitignore  BUILD.bazel  CMakeLists.txt  MODULE.bazel  README.md  WORKSPACE.bzlmod  annotated.html  annotated_dup.js  apollo_2common_2_json_objects_8h_source.html  apollo_2common_2action_8h_source.html  apollo_2common_2backend_8h_source.html  apollo_2common_2check__unsupported_8h_source.html  apollo_2common_2control_8h_source.html  apollo_2common_2control_flow_graph_8h_source.html  apollo_2common_2deparser_8h_source.html  apollo_2common_2expression_8h_source.html  apollo_2common_2extern_8h_source.html  apollo_2common_2globals_8h_source.html  apollo_2common_2header_8h_source.html  apollo_2common_2helpers_8h_source.html  apollo_2common_2lower_8h_source.html  apollo_2common_2midend_8h_source.html  apollo_2common_2parser_8h_source.html  apollo_2common_2shared_action_selector_check_8h_source.html  apollo_2portable__common_2midend_8h_source.html  apollo_2portable__common_2portable_8h_source.html  apollo_2tuna__nic_2midend_8h_source.html  apollo_backend.html  backends_2apollo_2common_2annotations_8h_source.html  backends_2apollo_2common_2options_8h_source.html  backends_2apollo_2portable__common_2options_8h_source.html  backends_2apollo_2tuna__nic_2options_8h_source.html  backends_2bmv2_2common_2annotations_8h_source.html  backends_2bmv2_2common_2options_8h_source.html  backends_2bmv2_2pna__nic_2options_8h_source.html  backends_2bmv2_2portable__common_2options_8h_source.html  backends_2bmv2_2psa__switch_2options_8h_source.html  backends_2bmv2_2simple__switch_2options_8h_source.html  bmv2_2common_2_json_objects_8h_source.html  (+826 more)
backends/apollo/: .gitignore  CMakeLists.txt  README.md  apollo.def
backends/apollo/common/: JsonObjects.cpp  JsonObjects.h  action.cpp  action.h  annotations.h  backend.h  check_unsupported.h  control.h  controlFlowGraph.cpp  controlFlowGraph.h  deparser.cpp  deparser.h  expression.cpp  expression.h  extern.cpp  extern.h  globals.cpp  globals.h  header.cpp  header.h  helpers.cpp  helpers.h  lower.cpp  lower.h  midend.h  options.h  parser.cpp  parser.h  sharedActionSelectorCheck.h
backends/apollo/portable_common/: midend.cpp  midend.h  options.cpp  options.h  portable.cpp  portable.h
backends/apollo/testdata/: tuna_basic.p4
backends/apollo/tuna_nic/: main.cpp  midend.cpp  midend.h  options.cpp  options.h  tuna.h  tunaNic.cpp  tunaNic.h  tunaProgramStructure.cpp  tunaProgramStructure.h  version.h.cmake
backends/apollo/tuna_nic/p4include/: tuna.p4
backends/bmv2/simple_switch/: midend.cpp
backends/p4test/: midend.cpp
backends/p4tools/: BUILD.bazel
backends/tofino/bf-asm/: CMakeLists.txt
bazel/: BUILD.json.bazel  MODULE.inja.bazel.patch  MODULE.z3.bazel.patch  p4c_bzlmod_deps.bzl  p4c_deps.bzl
bazel/example/: BUILD.bazel
cmake/: Abseil.cmake  BDWGC.cmake  GoogleTest.cmake  Protobuf.cmake
control-plane/: p4RuntimeSerializer.cpp
frontends/common/: parseInput.h
lib/: boost_format_helper.h  json.cpp
search/: all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_20.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_15.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_8.js  classes_9.js  classes_a.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  functions_0.js  (+23 more)
test/gtest/: midend_pass.cpp
thrid-party/bdwgc-src/: digimars.mak
tools/driver/: CMakeLists.txt
tools/driver/p4c_src/: p4c.apollo-tuna.cfg  p4c.apollo.cfg
