module(
    name = "p4c",
    bazel_compatibility = [">=7.4.1"],
    repo_name = "com_github_p4lang_p4c",
)

bazel_dep(name = "p4c_ir_extension")
local_path_override(module_name = "p4c_ir_extension", path = "bazel/p4c_ir_extension")

bazel_dep(
    name = "abseil-cpp",
    version = "20250127.0",
    repo_name = "com_google_absl",
)
bazel_dep(
    name = "bazel_skylib",
    version = "1.7.1",
)
bazel_dep(
    name = "boost.algorithm",
    version = "1.83.0.bcr.1",
)
bazel_dep(
    name = "boost.format",
    version = "1.83.0.bcr.1",
)
bazel_dep(
    name = "boost.functional",
    version = "1.83.0.bcr.1",
)
bazel_dep(
    name = "boost.graph",
    version = "1.83.0.bcr.1",
)
bazel_dep(
    name = "boost.iostreams",
    version = "1.83.0.bcr.1",
)
bazel_dep(
    name = "boost.multiprecision",
    version = "1.83.0.bcr.1",
)
bazel_dep(
    name = "buildifier_prebuilt",
    version = "8.0.1",
    dev_dependency = True,
)
bazel_dep(
    name = "googleapis",
    version = "0.0.0-20241220-5e258e33",
    repo_name = "com_google_googleapis",
)
bazel_dep(
    name = "googletest",
    version = "1.16.0",
    dev_dependency = True,
    repo_name = "com_google_googletest",
)
bazel_dep(
    name = "nlohmann_json",
    version = "3.11.3.bcr.1",
)
bazel_dep(
    name = "p4runtime",
    repo_name = "com_github_p4lang_p4runtime",
)
git_override(
    module_name = "p4runtime",
    # Newest commit on main branch as of Feb 27, 2025.
    commit = "73c7c8e7bdee66941b5a9c584b146b419e8f8607",
    remote = "https://github.com/p4lang/p4runtime.git",
    strip_prefix = "proto",
)
bazel_dep(
    name = "protobuf",
    version = "29.1",
    repo_name = "com_google_protobuf",
)
bazel_dep(
  name = "rules_cc",
  version = "0.1.1",
)
bazel_dep(
    name = "rules_license",
    version = "1.0.0",
    dev_dependency = True,
)
bazel_dep(
    name = "z3",
    repo_name = "com_github_z3prover_z3",
)
archive_override(
    module_name = "z3",
    url = "https://github.com/Z3Prover/z3/archive/z3-4.8.12.tar.gz",
    strip_prefix = "z3-z3-4.8.12",
    sha256 = "e3aaefde68b839299cbc988178529535e66048398f7d083b40c69fe0da55f8b7",
    build_file = "@//:bazel/BUILD.z3.bazel",
    patches = ["@//:bazel/MODULE.z3.bazel.patch"]
)
bazel_dep(
    name = "inja",
    repo_name = "com_github_pantor_inja",
)
archive_override(
    module_name = "inja",
    url = "https://github.com/pantor/inja/archive/refs/tags/v3.4.0.zip",
    strip_prefix = "inja-3.4.0/single_include",
    sha256 = "4ad04d380b8377874c7a097a662c1f67f40da5fb7d3abc3851544f59c3613a20",
    build_file = "@//:bazel/BUILD.inja.bazel",
    patches = ["@//:bazel/MODULE.inja.bazel.patch"]
)
